--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format-add": "prettier . --write && git add .,"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
