--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "consola": "^3.4.2",
     "lucide-react": "^0.562.0",
+    "numerable": "^0.3.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
