--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "consola": "^3.4.2",
     "dexie": "^4.2.1",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "numerable": "^0.3.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
