--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "consola": "^3.4.2",
     "dexie": "^4.2.1",
+    "immer": "^11.1.3",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "numerable": "^0.3.15",
