changed LocalMovies to CineVault

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # .env file
-VITE_APP_TITLE=Local Movies
+VITE_APP_TITLE=Cine Vault
 VITE_API_URL=/api
 VITE_YOUTUBE_URL=https://www.youtube.com
 VITE_IMDB_URL=https://www.imdb.com
