--- a/public/AppIcons/Web/manifest.json
+++ b/public/AppIcons/Web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "69928571-361c-4fc6-b717-f8201644197c-fotor-bg-remover-20260201175413",
-  "short_name": "69928571-361c-4fc6-b717-f8201644197c-fotor-bg-remover-20260201175413",
+  "name": "apple-touch-icon",
+  "short_name": "apple-touch-icon",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
