changed logo and icon

--- a/public/AppIcons/Web/manifest.json
+++ b/public/AppIcons/Web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "apple-touch-icon",
-  "short_name": "apple-touch-icon",
+  "name": "Fill the film reel a",
+  "short_name": "Fill the film reel a",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
