added import and export

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # .env file
 VITE_APP_TITLE=Cine Vault
+VITE_APP_VERSION=1.0.0
 VITE_API_URL=/api
 VITE_YOUTUBE_URL=https://www.youtube.com
 VITE_IMDB_URL=https://www.imdb.com
