--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "numerable": "^0.3.15",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
