--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
-    "types": ["vite/client"],
+    "types": ["vite/client", "vite-plugin-pwa/client", "vite-plugin-pwa/react"],
     "paths": {
       "@/*": ["./src/*"]
     }
